@@ -1,3 +1,15 @@
+2008-05-30  Christophe Fergeau  <teuf at gnome.org>
+
+	* src/details.c:
+	* src/display_coverart.c:
+	* src/display_itdb.c:
+	* src/display_photo.c:
+	* src/file.c:
+	* src/file_itunesdb.c:
+	* src/misc_track.c: adjust to libgpod API changes (use
+	itdb_track_has_thumbnail and itdb_track_get_thumbnail instead of using
+	deprecated API and struct members)
+
 2008-05-29 P.G. Richardson <phantom_sf at users.sourceforge.net>
 
   * src/fetchcover.c
